gcc/testsuite/algol68/compile/error-compile-unknown-tag-1.a68
module Bar = def pub int idpublic = 30;
                 int idprivate = 40;
                 xxx { dg-error "" }
             fed
